# SwiftDoc

./: .gitignore  CLAUDE.md  KNOWN_BUGS.md  README.md  m.toml  pyproject.toml  requirements.txt  src.rar
.github/workflows/: build-windows.yml
docs/: fixing_history.md
examples/ada/: main.adb  sensor.adb  sensor.ads  spi_driver.adb  spi_driver.ads  system.adb  system.ads  types.ads
examples/c/: main.c  swift-doc.toml  system.c  types.h
examples/c/bsw/: bsw_manager.c  bsw_manager.h
examples/c/bug_test/: braces_in_macro.c  demo_rescue_parse.py  func_in_macro.c  long_name_test.c  test.c
examples/c/comm/: sensor.c  sensor.h
examples/c/drivers/: driver.h  spi_driver.c
examples/c/moduledesign_2026-07-15_142254/: appendix.docx  braces_in_macro.docx  bsw_manager.docx  long_name_test.docx  main.docx  sensor.docx  spi_driver.docx  system.docx
examples/c/test/: test.c  test.h
src/: _version.py  ai_utils.py  appendix_generate.py  cli.py  compare.py  config_manager.py  extract_globals.py  extract_types.py  image_generator.py  main.py  md_generator.py  module_analysis.py  pipeline.py  utils.py  version_diff.py
src/aoto_md.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/config/: manager.py  toml_config.py
src/core/: ai.py  compare.py  utils.py
src/generators/: __init__.py  common.py  images.py
src/generators/docx/: __init__.py  appendix.py  functions.py
src/generators/markdown/: __init__.py  appendix.py  functions.py
src/parsers/: __init__.py  base.py  common.py  types.py
src/parsers/ada/: __init__.py  _utils.py  functions.py  globals.py  types.py
src/parsers/c/: __init__.py  functions.py  globals.py  types.py
tests/: conftest.py  test_ada_functions.py  test_ada_globals.py  test_ada_types.py  test_ai_utils.py  test_cli.py  test_compare.py  test_config_manager.py  test_detect_language.py  test_docx_generator.py  test_extract_globals.py  test_extract_types.py  test_image_generator.py  test_md_generator.py  test_module_analysis.py  test_pipeline.py  test_utils.py
