[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swift-doc"
version = "0.1.0"
description = "Multi-language code analysis CLI that generates graphs and documentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "chardet==7.4.3",
  "matplotlib==3.10.9",
  "openai==2.32.0",
  "python-docx==1.1.2",
  "tree-sitter==0.25.2",
  "tree-sitter-c==0.24.1",
  "tree-sitter-ada==0.1.0",
  "socksio==1.0.0",
  "pyinstaller>=6.0.0",
  "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
swift-doc = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli", "pipeline"]
[tool.setuptools.packages.find]
where = ["src"]
